--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Local .terraform directories
 .terraform/
 
+.idea/
+*.DS_Store*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
 
 # Crash log files
 crash.log
