--- a/app/infrastructure/entry-points/reactive-web/build.gradle
+++ b/app/infrastructure/entry-points/reactive-web/build.gradle
@@ -6,5 +6,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation "org.mapstruct:mapstruct:${mapStructVersion}"
+    implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${openApiVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
 }
