add service in terraform with task execution

--- a/app/deployment/Dockerfile
+++ b/app/deployment/Dockerfile
@@ -1,6 +1,6 @@
 FROM amazoncorretto:21.0.7-alpine3.21
 VOLUME /tmp
-COPY *.jar franchises.jar
+COPY applications/app-service/build/libs/franchises.jar franchises.jar
 
 ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=70 -Djava.security.egd=file:/dev/./urandom"
 
@@ -10,7 +10,6 @@ ENV DB_DATABASE=${DB_DATABASE}
 ENV DB_SCHEMA=${DB_SCHEMA}
 ENV DB_USERNAME=${DB_USERNAME}
 ENV DB_USER_PASSWORD=${DB_USER_PASSWORD}
-ENV ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
 
 USER appuser
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS  -jar franchises.jar" ]
